<resources>
    <string name="app_name">Ermeson Balbinot Andrade</string>
    <string name="lista_da_tabela_periodica">Lista da Tabela Periódica</string>
    <string name="proxima_tela">Próxima Tela</string>
    <string name="sele_o_de_elementos">Seleção de Elementos</string>
    <string name="nome_do_usu_rio">Nome do Usuário:</string>
    <string name="digite_seu_nome">Digite seu nome</string>
    <string name="digite_um_valor_de_1_a_7">Digite um valor de 1 a 7:</string>
    <string name="digite_um_n_mero_entre_1_e_7">Digite um número entre 1 e 7</string>
    <string name="gerar_sele_o">Gerar Seleção</string>
    <string name="itens_selecionados">Itens Selecionados:</string>
    <string name="pontua_o_0">Pontuação: 0</string>
    <string name="coracao">❤❤❤</string>
    <string name="finalizar">Finalizar</string>
    <string name="informa_es_da_tabela_periodica">Informações da Tabela Periodica</string>
    <string name="nome_do_elemento">Nome do Elemento:</string>
    <string name="sigla">Sigla:</string>
    <string name="massa_atomica">Massa Atomica</string>
    <string name="fechar">Fechar</string>
    <string name="elemento">Elemento</string>
    <string name="op_o_1">Opção 1</string>
    <string name="op_o_2">Opção 2</string>
    <string name="op_o_3">Opção 3</string>
    <string name="op_o_4">Opção 4</string>
    <string name="siglaa">Sigla</string>
    <string name="jogar_novamente">Jogar Novamente</string>
    <string name="mostrar_hist_rico">Mostrar Histórico</string>


    <!-- Hidrogênio -->
    <string-array name="perguntas_HIDROGENIO">
        <item>A) 1</item>
        <item>B) 10</item>
        <item>C) 55</item>
        <item>D) 89</item>
    </string-array>

    <!-- Lítio -->
    <string-array name="perguntas_LITIO">
        <item>A) 3</item>
        <item>B) 8</item>
        <item>C) 15</item>
        <item>D) 19</item>
    </string-array>

    <!-- Sódio -->
    <string-array name="perguntas_SODIO">
        <item>A) 11</item>
        <item>B) 20</item>
        <item>C) 45</item>
        <item>D) 76</item>
    </string-array>

    <!-- Potássio -->
    <string-array name="perguntas_POTASSIO">
        <item>A) 19</item>
        <item>B) 25</item>
        <item>C) 33</item>
        <item>D) 41</item>
    </string-array>

    <!-- Rubídio -->
    <string-array name="perguntas_RUBIDIO">
        <item>A) 37</item>
        <item>B) 50</item>
        <item>C) 62</item>
        <item>D) 80</item>
    </string-array>

    <!-- Césio -->
    <string-array name="perguntas_CESIO">
        <item>A) 55</item>
        <item>B) 72</item>
        <item>C) 85</item>
        <item>D) 100</item>
    </string-array>

    <!-- Frâncio -->
    <string-array name="perguntas_FRANCIO">
        <item>A) 87</item>
        <item>B) 92</item>
        <item>C) 99</item>
        <item>D) 108</item>
    </string-array>
</resources>