<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginBottom="16dp"
    android:background="@color/branco_azul"
    android:id="@+id/perguntasLayout">


    <ImageView
        android:id="@+id/imageViewElemento"
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:layout_gravity="end"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:layout_marginBottom="16dp" />

    <TextView
        android:id="@+id/textViewElemento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/elemento"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginBottom="12dp"
        android:padding="8dp"
        android:background="@color/branco_azul"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"
        android:gravity="center" />

    <CheckBox
        android:id="@+id/checkBox1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/op_o_1"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/green"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/op_o_2"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/green"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/op_o_3"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/green"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/op_o_4"
        android:padding="8dp"
        android:layout_marginBottom="8dp"
        android:buttonTint="@color/green"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/black"/>

</LinearLayout>
