<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/azul">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/textViewPontuacao"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pontua_o_0"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@android:color/black" />

        <TextView
            android:id="@+id/textViewCoracoes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coracao"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/red" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/branco_azul"
        android:padding="8dp"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/perguntasLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />
    </ScrollView>

    <Button
        android:id="@+id/btnFinalizar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/proxima_tela"
        android:backgroundTint="@color/green"
        android:textColor="@color/black"
        android:paddingVertical="12dp"
        android:textSize="16sp"
        android:layout_marginTop="16dp" />
</LinearLayout>
